--- a/.env
+++ b/.env
@@ -12,6 +12,14 @@ DB_PORT=5432
 ADMINER_TAG=4.7.9-standalone
 ADMINER_PORT=8081
 
+# Prefect
+PREFECT_TAG=2.13.2-python3.10
+PREFECT_PORT=4200
+PREFECT_UI_URL=http://127.0.0.1:4200/api
+PREFECT_SERVER_API_URL=http://127.0.0.1:4200/api
+PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
+PREFECT_API_URL=http://prefect-server:4200/api
+
 # MLFlow
 MLFLOW_PORT=5000
 MLFLOW_BACKEND_STORE_URI=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
