--- a/services/python/requirements.txt
+++ b/services/python/requirements.txt
@@ -42,11 +42,13 @@ coolname==2.2.0
 croniter==1.4.1
 cryptography==41.0.3
 cycler==0.11.0
+dask==2023.9.2
 databricks-cli==0.17.7
 dateparser==1.1.8
 decorator==5.1.1
 dictdiffer==0.9.0
 diskcache==5.6.3
+distributed==2023.9.2
 distro==1.8.0
 docker==6.1.3
 docutils==0.20.1
@@ -111,6 +113,7 @@ kombu==5.3.2
 kubernetes==28.1.0
 linear-operator==0.5.2
 lit==16.0.6
+locket==1.0.0
 Mako==1.2.4
 Markdown==3.4.4
 markdown-it-py==3.0.0
@@ -120,6 +123,7 @@ mccabe==0.7.0
 mdurl==0.1.2
 mlflow==2.4.1
 mpmath==1.3.0
+msgpack==1.0.6
 multidict==6.0.4
 mypy-extensions==1.0.0
 networkx==3.1
@@ -142,6 +146,7 @@ optuna==3.2.0
 orjson==3.9.6
 packaging==23.1
 pandas==2.0.2
+partd==1.4.1
 pathspec==0.11.2
 PCSE==5.5.5
 pendulum==2.1.2
@@ -198,6 +203,7 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 Sphinx==7.2.5
 sphinx-argparse==0.4.0
 sphinxcontrib-applehelp==1.0.7
@@ -212,12 +218,15 @@ sqltrie==0.7.0
 starlette==0.27.0
 sympy==1.12
 tabulate==0.9.0
+tblib==2.0.0
 text-unidecode==1.3
 threadpoolctl==3.2.0
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.12.1
+toolz==0.12.0
 torch==2.0.1
+tornado==6.3.3
 tqdm==4.65.0
 traitlets-pcse==5.0.0.dev0
 triton==2.0.0
@@ -237,6 +246,7 @@ Werkzeug==2.3.7
 wheel==0.38.4
 yarl==1.9.2
 zc.lockfile==3.0.post1
+zict==3.0.0
 zipp==3.16.2
 zope.event==5.0
 zope.interface==6.0
