--- a/.env
+++ b/.env
@@ -15,9 +15,10 @@ ADMINER_PORT=8081
 # Prefect
 PREFECT_TAG=2.13.2-python3.10
 PREFECT_PORT=4200
+PREFECT_DB_PORT=5433
 PREFECT_UI_URL=http://127.0.0.1:4200/api
 PREFECT_SERVER_API_URL=http://127.0.0.1:4200/api
-PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
+PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@prefect-postgres:5432/prefect
 PREFECT_API_URL=http://prefect-server:4200/api
 
 # MLFlow
