adding hydra conf

--- a/.env
+++ b/.env
@@ -41,6 +41,11 @@ AWS_SECRET_ACCESS_KEY=$MINIO_SECRET_KEY
 MLFLOW_S3_ENDPOINT_URL=http://minio:9000
 MINIO_STORAGE_USE_HTTPS=False
 
+# Grafana
+GRAFANA_TAG=9.5.5
+GRAFANA_PORT=3000
+GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel,grafana-worldmap-panel
+
 # Portainer 
 PORTAINER_TAG=linux-arm64-2.18.2
 PORTAINER_PORT=9443
