--- a/services/python/requirements.txt
+++ b/services/python/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 adbnx-adapter==4.2.0
 aiohttp==3.8.5
 aiohttp-retry==2.8.3
@@ -10,6 +11,9 @@ antlr4-python3-runtime==4.9.3
 anyio==3.7.1
 appdirs==1.4.4
 apprise==1.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arviz==0.15.1
 asgi-lifespan==2.1.0
 async-timeout==4.0.3
 asyncpg==0.28.0
@@ -17,12 +21,17 @@ asyncssh==2.13.2
 atpublic==4.0
 attrs==23.1.0
 Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
 billiard==4.1.0
 black==23.9.0
+bleach==6.0.0
 blinker==1.6.2
 boto3==1.26.161
 botocore==1.29.161
+botorch==0.8.5
 cachetools==5.3.1
+category-encoders==2.6.2
 celery==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
@@ -36,7 +45,9 @@ cmaes==0.10.0
 cmake==3.27.4.1
 colorama==0.4.6
 colorlog==6.7.0
+comm==0.1.4
 configobj==5.0.8
+cons==0.4.6
 contourpy==1.1.0
 coolname==2.2.0
 croniter==1.4.1
@@ -45,7 +56,10 @@ cycler==0.11.0
 dask==2023.9.2
 databricks-cli==0.17.7
 dateparser==1.1.8
+debugpy==1.8.0
 decorator==5.1.1
+deepchecks==0.17.4
+defusedxml==0.7.1
 dictdiffer==0.9.0
 diskcache==5.6.3
 distributed==2023.9.2
@@ -63,8 +77,13 @@ dvc-studio-client==0.15.0
 dvc-task==0.3.0
 entrypoints==0.4
 et-xmlfile==1.1.0
+etuples==0.3.9
+evidently==0.4.5
 exceptiongroup==1.1.3
 fastapi==0.103.1
+fastapi-utils==0.2.1
+fastjsonschema==2.18.0
+fastprogress==1.0.3
 filelock==3.12.3
 flake8==6.1.0
 Flask==2.3.3
@@ -78,11 +97,13 @@ gevent==22.10.2
 gitdb==4.0.10
 GitPython==3.1.31
 google-auth==2.23.0
+google-auth-oauthlib==1.0.0
 gpytorch==1.10
 grandalf==0.8
 graphviz==0.20.1
 greenlet==2.0.2
 griffe==0.36.2
+grpcio==1.58.0
 gunicorn==20.1.0
 h11==0.14.0
 h2==4.1.0
@@ -97,36 +118,60 @@ idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.8.0
 iniconfig==2.0.0
+ipykernel==6.25.2
+ipython==7.34.0
 ipython-genutils==0.2.0
+ipywidgets==7.8.1
 iterative-telemetry==0.0.8
 itsdangerous==2.1.2
 jaxtyping==0.2.21
+jedi==0.19.0
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.2.0
 jsonpatch==1.33
+jsonpickle==3.0.2
 jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+jupyter_client==7.4.9
+jupyter_core==5.3.2
+jupyter-server==1.24.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.7
 kiwisolver==1.4.5
 kombu==5.3.2
 kubernetes==28.1.0
-linear-operator==0.5.2
+linear-operator==0.4.0
 lit==16.0.6
 locket==1.0.0
+logical-unification==0.4.6
 Mako==1.2.4
 Markdown==3.4.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.7.1
+matplotlib-inline==0.1.6
 mccabe==0.7.0
 mdurl==0.1.2
+miniKanren==1.0.3
+mistune==3.0.1
 mlflow==2.4.1
 mpmath==1.3.0
 msgpack==1.0.6
 multidict==6.0.4
+multipledispatch==1.0.0
 mypy-extensions==1.0.0
+nbclassic==1.0.0
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
 networkx==3.1
+nflows==0.14
+nltk==3.8.1
+notebook==6.5.6
+notebook_shim==0.2.3
 numpy==1.25.0
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
@@ -142,23 +187,33 @@ nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
 omegaconf==2.3.0
 openpyxl==3.1.2
+opt-einsum==3.3.0
 optuna==3.2.0
 orjson==3.9.6
 packaging==23.1
 pandas==2.0.2
+pandocfilters==1.5.0
+parso==0.8.3
 partd==1.4.1
 pathspec==0.11.2
+patsy==0.5.3
 PCSE==5.5.5
 pendulum==2.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==10.0.0
 pip==23.2.1
 platformdirs==3.10.0
+plotly==5.17.0
 pluggy==1.3.0
 prefect==2.13.2
+prometheus-client==0.17.1
+prometheus-flask-exporter==0.22.4
 prompt-toolkit==3.0.39
 protobuf==4.24.3
 psutil==5.9.5
 psycopg2==2.9.6
+ptyprocess==0.7.0
 pyarrow==12.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -171,15 +226,23 @@ pygit2==1.13.0
 Pygments==2.16.1
 pygtrie==2.5.0
 PyJWT==2.8.0
+pyknos==0.15.1
+pymc==5.6.0
+PyNomaly==0.3.3
 pyparsing==3.1.1
+pyro-api==0.1.2
+pyro-ppl==1.8.6
+pytensor==2.12.3
 pytest==7.4.2
 python-arango==7.7.0
 python-dateutil==2.8.2
 python-decouple==3.8
 python-slugify==8.0.1
+python-utils==3.8.1
 pytz==2023.3.post1
 pytzdata==2020.1
 PyYAML==6.0
+pyzmq==23.2.1
 querystring-parser==1.2.4
 readchar==4.0.5
 referencing==0.30.2
@@ -193,9 +256,11 @@ rsa==4.9
 ruamel.yaml==0.17.32
 ruamel.yaml.clib==0.2.7
 s3transfer==0.6.2
+sbi==0.21.0
 scikit-learn==1.3.0
-scipy==1.11.0
+scipy==1.10.1
 scmrepo==1.3.1
+Send2Trash==1.8.2
 setuptools==68.0.0
 shortuuid==1.0.11
 shtab==1.6.4
@@ -204,6 +269,7 @@ smmap==5.0.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 Sphinx==7.2.5
 sphinx-argparse==0.4.0
 sphinxcontrib-applehelp==1.0.7
@@ -216,11 +282,17 @@ SQLAlchemy==1.4.49
 sqlparse==0.4.3
 sqltrie==0.7.0
 starlette==0.27.0
+statsmodels==0.14.0
 sympy==1.12
 tabulate==0.9.0
 tblib==2.0.0
+tenacity==8.2.3
+tensorboard==2.14.1
+tensorboard-data-server==0.7.1
+terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.2.0
+tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.12.1
@@ -228,6 +300,7 @@ toolz==0.12.0
 torch==2.0.1
 tornado==6.3.3
 tqdm==4.65.0
+traitlets==5.10.1
 traitlets-pcse==5.0.0.dev0
 triton==2.0.0
 typeguard==2.13.3
@@ -239,11 +312,16 @@ urllib3==1.26.15
 uvicorn==0.23.2
 vine==5.0.0
 voluptuous==0.13.1
+watchdog==3.0.0
 wcwidth==0.2.6
+webencodings==0.5.1
 websocket-client==1.6.2
 websockets==11.0.3
 Werkzeug==2.3.7
 wheel==0.38.4
+widgetsnbextension==3.6.6
+xarray==2023.9.0
+xarray-einstats==0.6.0
 yarl==1.9.2
 zc.lockfile==3.0.post1
 zict==3.0.0
