--- a/.env
+++ b/.env
@@ -40,11 +40,22 @@ AWS_ACCESS_KEY_ID=$MINIO_ACCESS_KEY
 AWS_SECRET_ACCESS_KEY=$MINIO_SECRET_KEY
 MLFLOW_S3_ENDPOINT_URL=http://minio:9000
 MINIO_STORAGE_USE_HTTPS=False
+MINIO_PROMETHEUS_AUTH_TYPE=public
 
 # Grafana
 GRAFANA_TAG=9.5.5
 GRAFANA_PORT=3000
 GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel,grafana-worldmap-panel
+
+# Prometheus 
+PROMETHEUS_TAG=v2.41.0
+PROMETHEUS_PORT=9090
+PROMETHEUS_NODE_EXPORTER_TAG=v1.5.0
+PROMETHEUS_NODE_EXPORTER_PORT=9100
+PROMETHEUS_ALERT_MANAGER_TAG=v0.25.0
+PROMETHEUS_ALERT_MANAGER_PORT=9093
+PROMETHEUS_CADVISOR_TAG=v0.47.2
+PROMETHEUS_CADVISOR_PORT=8080
 
 # Portainer 
 PORTAINER_TAG=linux-arm64-2.18.2
