--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,13 +1,10 @@
 defaults:
   - _self_
-  - crop: surgarbeet
+  - crop: sugarbeet
+  - dir: default
   - experiment_tracking: docker
   - sampling: wofost
   
 experiment:
   name: prefect_surrogate_models
   seed: 100
-  
-dir:
-  data_dir: data
-  out_dir: out
