--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,9 @@
 defaults:
   - _self_
   - crop: sugarbeet
+  - data: default
   - dir: default
   - experiment: default
+  - optimise: tpes
   - sampling: wofost
+  - surrogate: gp
